package-json adjustments

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bernardbraun.github.io/film-list/",
+  "homepage": "./",
   "name": "film-list",
   "version": "0.1.0",
   "private": true,
